Fix header z-index

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -84,7 +84,7 @@ body.template-leftbar .box-1 {
   top: 0;
   right: 289px;
   width: 474px;
-  z-index: 11;
+  z-index: 31;
 }
 
 #site-title {
